--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chartjs-plugin-zoom": "^2.0.1",
     "date-fns": "^3.6.0",
     "hash-sum": "^2.0.0",
+    "lru-cache": "^11.0.0",
     "memoizee": "^0.4.17",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
