--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "hash-sum": "^2.0.0",
     "lru-cache": "^11.0.0",
     "memoizee": "^0.4.17",
+    "quickselect": "^3.0.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
