--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-toastify": "^11.0.2",
     "remark-frontmatter": "^5.0.0",
     "remark-mdx-frontmatter": "^5.0.0",
     "styled-components": "^6.1.12",
